--- a/src/Components/HomeComponent/Home.module.css
+++ b/src/Components/HomeComponent/Home.module.css
@@ -1,115 +1,118 @@
-
- body{
-    margin: 0px;
+#header {
+  /* background-color: #2e6da4dc; */
+  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
-
- 
- #header{
-      /* background-color: #2e6da4dc; */
-      background-color: rgba(0, 0, 0, 0.9);
-      
-      float: left;
-      height: 50px;
-      width: 100%;
-
-      position: fixed;
-      z-index: 1;
-
-  }
 
 /* --------------------------------------------------------- */
 
-   #headerHeadingBox{
-      /* background-color: cyan; */
-      float: left;
-      height: 50px;
-      width: 400px;
-      color: rgba(255, 255, 255, 0.95);
-      letter-spacing: 1.6;
-      font-size: x-large;
-      margin-left:40px;
-  }
+#header h3 {
+  color: #fff;
+  font-family: "Roboto" sans-serif;
+  margin: 20px 50px;
+}
 
-
-     
-   #headerHeadingBox h3{
-     margin: 0px;
-     padding-top: 10px;
-     padding-left: 10px;
-   }
-
-       
 /* ------------------------------------------------------------------------- */
 
+#main {
+  background-color: #eff2f5;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+#div1 img {
+  height: 110px;
+  width: 150px;
+}
 
-    #div1{
-          /* background-color: yellow; */
-          float: left;
-          height: 150px;
-          width: 1320px;
+#div1 span {
+  display: block;
+  font-size: x-large;
+  font-weight: 600;
+}
 
-          position: relative;
-          top: 55;
-          
-          margin-top: 80px;
-          margin-left: 20px;
+#div2 {
+  display: flex;
+  margin: 50px;
+}
 
-          text-align: center;
-    }
+.div3 {
+  text-align: center;
+  background-color: #fff;
+  margin: 0 50px;
+  padding: 50px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.5s;
+}
 
+#div2 .div3:hover {
+  transform: scale(1.1);
+}
 
-    #div1 img{
-        height: 110px;
-        width: 150px;
-    }
+.div3 img {
+  width: 200px;
+}
 
-    #div1 span{
-      display: block;
-      font-size: x-large;
-   }
+.div3 span {
+  display: block;
+  font-size: x-large;
+  font-weight: 600;
+}
 
+.div3 a {
+  color: black;
+  text-decoration: none;
+}
 
-   #div2{
-        /* background-color: yellow; */
-         float: left;
-          height: 300px;
-          width: 1000px;
+@media (max-width: 1000px) {
+  #main {
+    padding-top: 50px;
+  }
+}
 
-          position: relative;
-          top: 55;
-          
-          margin-top: 30px;
-          margin-left: 180px;
+@media (max-width: 850px) {
+  .div3 {
+    margin: 0 20px;
+  }
+}
 
-          text-align: center;
-    }
+@media (max-width: 700px) {
+  #main {
+    height: auto;
+  }
 
+  #div1 {
+    margin-top: 50px;
+  }
 
-    .div3{
-        float: left;
-        height: 300px;
-        width: 455px;
-        margin-left: 30px;
+  #div2 {
+    flex-direction: column;
+  }
 
-        text-align: center;
-    }
+  .div3 {
+    margin: 20px;
+  }
 
-    .div3 img{
-       height: 250px;
-       width: 300px;
-       margin-top: 20px;
-       border: 1px solid black;
-    }
+  #div2 .div3:hover {
+    transform: none;
+  }
+}
 
+@media (max-width: 360px) {
+  #main {
+    width: 100%;
+  }
 
-    .div3 span{
-       display: block;
-       font-size: x-large;
-    }
-
-
-    .div3 a{
-        color: black;
-        text-decoration: none;
-    }
+  .div3 img {
+    width: 150px;
+  }
+}
