--- a/src/Components/StudentComponent/StudentLogin/StudentLogin.module.css
+++ b/src/Components/StudentComponent/StudentLogin/StudentLogin.module.css
@@ -1,133 +1,111 @@
-
-   body{
-    background-color: ecedf3;
+.loginSection {
+  height: 100vh;
+  width: 100%;
+  background-color: #eff2f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* -------------------------------------------------------------- */
 
-
-   #container{
-       background-color: white;
-       height: 470px;
-       width: 500px;
-      
-       margin-left: 400px;
-       float: left;
-       border: 1px solid #2e6da4;
-   }
-   
-/* -------------------------------------------------------------- */
-#containerHeadingBox{
-    background-color: white;
-    width: 400px;
-    margin-left: 50px;
-    float: left;
-    text-align: center;
+#container {
+  background-color: #fff;
+  padding: 40px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
-#containerHeadingBox h1{
-    color: #2e6da4;
-
-    margin: 10px 10px;
-   
-}
-
-
 
 /* -------------------------------------------------------------- */
 
-
- #emailBox,
- #passwordBox{
-      margin-top: 20px;
-      margin-bottom: 20px;
-      float: left;
-      width: 500px;    
-
- }
-
- #emailBox label,
- #passwordBox label{
-     margin-left: 10%;
-     margin-bottom: 20px;
-    font-size: 23px;
-    color: #2e6da4;
- }
-
- #emailBox input,
- #passwordBox input{
-     font-size: x-large;
-     display: block;
-     width: 80%;
-     margin-left: 10%;
-     margin-top: 10px;
- }
-
-/* ----------------------------------------------------------------------*/
- 
-    #forgotBox{
-        float: left;
-        width: 500px;
-        text-align: right;
-    }
-
-      #forgotBox a{
-        text-decoration: none;
-        color: #2e6da4e0;
-        font-size: 18px;
-        margin-right: 10%;
-    }
-
-     #forgotBox a:hover{
-        text-decoration:underline;
-        color: #2e6da4;
-    }
-    
-
-/* ----------------------------------------------------------------------*/
-
-
- #login{
-     margin-top: 15px;
-     margin-left: 10%;
-
-     font-size: x-large;
-     text-align: center;
-     width: 80%;
-     height: 40px;
-     color: white;
-     background-color: #2e6da4ee;
-     cursor: pointer;
-
- }
-
-
- #login:hover{
-     background-color: #2e6da4;
-
- }
-
-/* ----------------------------------------------------------------------*/
-
-#signup{
-    margin-top: 20px;
-    font-size: 16px;
-    text-align: center;
+#container h1 {
+  color: #2e6da4;
+  margin: 0 0 30px 0;
 }
 
+/* -------------------------------------------------------------- */
 
- #signup a{
-     text-decoration: none;
-     color: #2e6da4d7;
- }
+.form {
+  display: flex;
+  flex-direction: column;
+}
 
- 
- #signup a:hover{
-     text-decoration: underline;
-     color: #2e6da4;
- }
+.form input {
+  padding: 10px 0;
+  width: 350px;
+  margin-bottom: 10px;
+  border: none;
+  font-size: 20px;
+  color: #2e6da4;
+  border-bottom: 1px solid #2e6da4;
+}
 
- #goBackLink{
-     margin-top: 10px;
-     display: block;
- }
+.form input:focus {
+  outline: none;
+}
+
+.form input::placeholder {
+  font-size: 20px;
+  color: #2e6da4;
+}
+
+/* ----------------------------------------------------------------------*/
+
+#forgotBox {
+}
+
+#forgotBox a {
+  text-decoration: none;
+  color: #2e6da4e0;
+  font-size: 18px;
+}
+
+#forgotBox a:hover {
+  text-decoration: underline;
+  color: #2e6da4;
+}
+
+/* ----------------------------------------------------------------------*/
+
+#login {
+  font-size: large;
+  text-align: center;
+  color: white;
+  background-color: #2e6da4ee;
+  cursor: pointer;
+  border: none;
+  margin-top: 10px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+#login:hover {
+  background-color: #2e6da4;
+}
+
+/* ----------------------------------------------------------------------*/
+
+#signup {
+  margin-top: 20px;
+  font-size: 16px;
+  text-align: center;
+}
+
+#signup a {
+  text-decoration: none;
+  color: #2e6da4d7;
+}
+
+#signup a:hover {
+  text-decoration: underline;
+  color: #2e6da4;
+}
+
+#goBackLink {
+  margin-top: 10px;
+  display: block;
+}
