--- a/src/Components/HomeComponent/Home.module.css
+++ b/src/Components/HomeComponent/Home.module.css
@@ -51,6 +51,7 @@
   padding: 50px;
   border-radius: 20px;
   cursor: pointer;
+  box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
   transition: all 0.5s;
 }
 
