--- a/src/Components/StudentComponent/StudentLogin/StudentLogin.module.css
+++ b/src/Components/StudentComponent/StudentLogin/StudentLogin.module.css
@@ -18,13 +18,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: all 0.5s;
+}
+
+#container:hover {
+  transform: scale(1.1);
 }
 
 /* -------------------------------------------------------------- */
 
 #container h1 {
   color: #2e6da4;
-  margin: 0 0 30px 0;
+  margin: 0 0 50px 0;
 }
 
 /* -------------------------------------------------------------- */
@@ -37,7 +42,7 @@
 .form input {
   padding: 10px 0;
   width: 350px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border: none;
   font-size: 20px;
   color: #2e6da4;
@@ -54,9 +59,6 @@
 }
 
 /* ----------------------------------------------------------------------*/
-
-#forgotBox {
-}
 
 #forgotBox a {
   text-decoration: none;
@@ -108,4 +110,19 @@
 #goBackLink {
   margin-top: 10px;
   display: block;
+}
+
+@media (max-width: 500px) {
+  #container {
+    width: 90%;
+    padding: 40px 10px;
+  }
+
+  .form input {
+    width: 100%;
+  }
+
+  #container:hover {
+    transform: none;
+  }
 }
