--- a/src/Components/AdminComponent/AdminDashboard/Dashboard/Dashboard.module.css
+++ b/src/Components/AdminComponent/AdminDashboard/Dashboard/Dashboard.module.css
@@ -1,62 +1,60 @@
-
-
-
-
-
-#displayHeadingBox h1{
-    margin-left: 10px;
+#displayHeadingBox h1 {
+  margin-left: 10px;
 }
 
+.boxContainer {
+  display: flex;
+}
 
 #box1,
 #box2,
-#box3{
-    background-color: cyan;
-    height: 90px;
-    width: 32%;
-    float:left;
-    margin-left: 10px;
-    color: white;
+#box3 {
+  background-color: cyan;
+  width: 300px;
+  height: 400px;
+  margin: 10px;
+  padding: 10px 30px;
+  border-radius: 20px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
 }
 
-
-#box1,
-#box3{
-   background-color: rgba(0, 0, 255, 0.6);
-}
-
-#box2{
-   background-color:rgb(231, 192, 61);
+#box1 {
+  background-color: #3e97ff;
+  color: #fff;
 }
 
 #box1 p,
 #box2 p,
-#box3 p{
-    font-size: large;
+#box3 p {
+  font-size: large;
+  height: 75%;
+  overflow-wrap: break-word;
 }
-
 
 #box1 button,
 #box2 button,
-#box3 button{
-   width: 100%;
-   height: 30px;
-   text-align: center;
-   font-size: x-large;
-   background-color: transparent;
-   border-color: transparent;
-   border-top: 1px solid black;
-   color: rgba(255, 255, 255, 0.7);
-   outline: 0px;
-   font-family: 'Times New Roman', Times, serif;
+#box3 button {
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  background-color: transparent;
+  border-color: transparent;
+  border-top: 1px solid black;
+  color: #000;
+  padding: 10px;
+  outline: 0px;
 }
 
-
- 
+#box1 button {
+  border-top: 1px solid #fff;
+  color: #fff;
+}
 
 #box1 button:hover,
 #box2 button:hover,
-#box3 button:hover{
-    color: white;
-    cursor:pointer;
+#box3 button:hover {
+  cursor: pointer;
 }
