--- a/src/Components/AdminComponent/AdminDashboard/AdminDashboard.module.css
+++ b/src/Components/AdminComponent/AdminDashboard/AdminDashboard.module.css
@@ -11,6 +11,7 @@ body {
   width: 100%;
   position: fixed;
   z-index: 1;
+  box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
 }
 
 /* --------------------------------------------------------- */
