--- a/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
+++ b/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
@@ -1,124 +1,114 @@
- 
+#displayHeadingBox h2 {
+  margin-left: 10px;
+  font-size: 30px;
+  /* background-color: yellow; */
+}
 
-  
-  #displayHeadingBox h2{
-     margin-left: 10px;
-     font-size: 30px;
-    /* background-color: yellow; */
- }
+/* -------------------------------------------------------------------------------- */
 
+#tableBox {
+  /* background-color: cyan; */
+  width: 1120px;
+  float: left;
+  margin-left: 10px;
+  font-size: 20px;
+}
 
- /* -------------------------------------------------------------------------------- */
- 
- 
- #tableBox{
-     /* background-color: cyan; */
-     width: 1120px;
-     float:left;
-     margin-left: 10px;
-     font-size: 20px;
- }
-   
-    table{
-      width: 100%;
-      border-collapse: collapse;
-     
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
-   table,tr,td,th{
-     border: 1px solid black;
-   }
- 
-   #center{
-     text-align: center;
-   }
- 
-   tr{
-     text-align: center;
-   }
+table,
+tr,
+td,
+th {
+  border: 1px solid black;
+}
 
-   th{
-    height: 35px;
-   }
- 
-    tr td button{
-      color: white;
-      background-color: black;
-      height: 35px;
-      min-width: 90px;
-      border-radius: 7px;
-    }
- 
-    tr td button:hover{
-      background-color: rgba(0, 0, 0, 0.9);
-    }
- 
-    #addSubjectBox{
-       /* background-color: yellow; */
-       float: left;
-       width: 100px;
-       margin-left: 10px;
-       margin-top: 10px;
-    }
+#center {
+  text-align: center;
+}
 
+tr {
+  text-align: center;
+}
 
-    #addSubjectBox button{
-          height: 30px;
-          color: #fff;
-          background-color: #28a745;
-          border-color: #28a745;
-          border-radius: .25rem;
-          cursor: pointer;
-    }  
+th {
+  height: 35px;
+}
 
+tr td button {
+  color: white;
+  background-color: black;
+  height: 35px;
+  min-width: 90px;
+  border-radius: 7px;
+}
 
-    #addSubjectBox button:hover{
-      background-color: #0c4d1b;
- }
- 
- /* ---------------------------------------------------------------------------------- */
+tr td button:hover {
+  background-color: rgba(0, 0, 0, 0.9);
+}
 
- /* Add Subject css */
+#addSubjectBox {
+  /* background-color: yellow; */
+  float: left;
+  width: 100px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
 
- 
- #addBox{
+#addSubjectBox button {
+  background-color: #3e97ff;
+  color: #fff;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  border: none;
+  padding: 15px 20px;
+  width: 150px;
+  font-size: 15px;
+}
+
+#addSubjectBox button:hover {
+  background-color: #2088ff;
+}
+
+/* ---------------------------------------------------------------------------------- */
+
+/* Add Subject css */
+
+#addBox {
   margin-top: 50px;
   margin-left: 10px;
-
- /* background-color: yellow; */
- float: left;
- width: 1050px;
- min-height: 150px;
- float: left;
- /* display:none; */
- 
+  background-color: yellow;
+  float: left;
+  display: flex;
+  /* flex-direction: column; */
+  /* display:none; */
 }
 
 /* #buttonBox{
         
 } */
 
-   #addBox button {
-      margin-top: 10px; 
-      height: 30px;
-      color: #fff;
-      background-color: #28a745;
-      border-color: #28a745;
-      border-radius: .25rem;
-      cursor: pointer;
-      margin-left: 10px;
-      min-width: 50px;
-  }
-
-  #addBox button:hover{
-    background-color: #0c4d1b;
+#addBox button {
+  background-color: #3e97ff;
+  color: #fff;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  border: none;
+  padding: 10px;
+  width: 100px;
+  font-size: 15px;
+  margin-right: 10px;
 }
 
+#addBox button:hover {
+  background-color: #0c4d1b;
+}
 
-
-#addBox input{
+#addBox input {
   margin-top: 20px;
-  width: 800px;
   height: 25px;
   padding: 6px 12px;
   font-size: 16px;
@@ -130,18 +120,11 @@
   border-radius: 4px;
 }
 
-
-#addBox label{
-  display: inline-block;
+#addBox label {
   margin-right: 40px;
   font-size: 18px;
-  
 }
 
-
-
-.addQuestion{
-   margin-top:0px !important;   
+.addQuestion {
+  margin-top: 0px !important;
 }
-
-
