--- a/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
+++ b/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
@@ -78,13 +78,16 @@ tr td button:hover {
 /* Add Subject css */
 
 #addBox {
+  width: 500px;
   margin-top: 50px;
   margin-left: 10px;
-  background-color: yellow;
-  float: left;
-  display: flex;
-  /* flex-direction: column; */
+  background-color: #fff;
   /* display:none; */
+  position: absolute;
+  top: 150px;
+  border-radius: 20px;
+  padding: 50px;
+  box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
 }
 
 /* #buttonBox{
@@ -104,11 +107,17 @@ tr td button:hover {
 }
 
 #addBox button:hover {
-  background-color: #0c4d1b;
+  background-color: #2088ff;
+}
+
+#addBox #inputWrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 #addBox input {
-  margin-top: 20px;
+  margin: 20px 0;
   height: 25px;
   padding: 6px 12px;
   font-size: 16px;
@@ -120,9 +129,13 @@ tr td button:hover {
   border-radius: 4px;
 }
 
+#addBox input:focus {
+  outline: none;
+}
+
 #addBox label {
-  margin-right: 40px;
   font-size: 18px;
+  font-weight: 600;
 }
 
 .addQuestion {
