--- a/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
+++ b/src/Components/AdminComponent/AdminDashboard/SubjectComponent/Subject.module.css
@@ -7,7 +7,7 @@
 /* -------------------------------------------------------------------------------- */
 
 #tableBox {
-  /* background-color: cyan; */
+  background-color: #fff;
   width: 1120px;
   float: left;
   margin-left: 10px;
@@ -88,6 +88,7 @@ tr td button:hover {
   border-radius: 20px;
   padding: 50px;
   box-shadow: 0px 0px 10px 0px rgba(76, 87, 125, 0.25);
+  text-align: center;
 }
 
 /* #buttonBox{
@@ -117,7 +118,7 @@ tr td button:hover {
 }
 
 #addBox input {
-  margin: 20px 0;
+  margin: 0px 10px 20px 0;
   height: 25px;
   padding: 6px 12px;
   font-size: 16px;
@@ -136,6 +137,7 @@ tr td button:hover {
 #addBox label {
   font-size: 18px;
   font-weight: 600;
+  margin-bottom: 20px;
 }
 
 .addQuestion {
